<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.9">
  <DUT Name="E_AOIRobotActions" Id="{1cc4a311-0c01-4418-93a2-204d601852a7}">
    <Declaration><![CDATA[{attribute 'strict'}
TYPE E_AOIRobotActions :
(
	AOI_ROBOT_ACTION_PICK					:= 60,
	AOI_ROBOT_ACTION_PLACE					:= 61,
	AOI_ROBOT_ACTION_GO_BOWL				:= 62,	
	AOI_ROBOT_ACTION_GO_TO_STATION_1		:= 63,
	AOI_ROBOT_ACTION_GO_TO_STATION_2		:= 64,
	AOI_ROBOT_ACTION_GO_TO_ROTARY_TABLE		:= 65,
	
	AOI_ROBOT_ACTION_GO_INPUT_PRODUCT		:= 73
	
//	AOI_ROBOT_ACTION_GO_FIXTURE_TWO_PLACE	:= 65,
//	AOI_ROBOT_ACTION_GO_FIXTURE_TWO_PICK	:= 66,
//	AOI_ROBOT_ACTION_GO_FIXTURE_THREE_PLACE	:= 67,
//	AOI_ROBOT_ACTION_GO_FIXTURE_THREE_PICK	:= 68,
//	AOI_ROBOT_ACTION_GO_FIXTURE_FOUR_PLACE	:= 69,
//	AOI_ROBOT_ACTION_GO_FIXTURE_FOUR_PICK	:= 70,
//	AOI_ROBOT_ACTION_GO_TO_REJECTBOX		:= 110,
//	AOI_ROBOT_ACTION_GO_OUTPUT_PRODUCT		:= 74,
//	AOI_ROBOT_ACTION_GO_TO_GS_1				:= 120,
//	AOI_ROBOT_ACTION_GO_TO_GS_2				:= 130,
//	AOI_ROBOT_ACTION_GO_TO_GS_3				:= 140,
//	AOI_ROBOT_ACTION_GO_TO_GS_4				:= 150,
//	AOI_ROBOT_ACTION_GO_TO_GS_OUT_POSITION	:= 160,
//	AOI_ROBOT_ACTION_GO_TO_GS_LOW_2			:= 80,
//	AOI_ROBOT_ACTION_GO_TO_GS_LOW_3			:= 81,
//	AOI_ROBOT_ACTION_GO_TO_GS_LOW_4			:= 82,
//	AOI_ROBOT_ACTION_DROP					:= 300
//	AOI_ROBOT_ACTION_PICK_RNR				:= 84,
//	AOI_ROBOT_ACTION_GO_INPUT_RNR			:= 85

)UINT;
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>