<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.9">
  <DUT Name="E_AOIRobotStateAbort" Id="{6f9254bd-88ed-4346-bf17-8026fa4f0eab}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
TYPE E_AOIRobotStateAbort :
(
	CR800_RESET := 0,
	CR800_ABORT := 10
);
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>