<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.9">
  <DUT Name="E_AOIRobotStateInit" Id="{022b1ca5-9859-4b2f-952c-4d0e250b45a2}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
TYPE E_AOIRobotStateInit :
(
	CR800_RESET 	:= 0,
	CR800_INIT		:= 10
);
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>